force-app/main/default/objects/SiteUserRecommendation__c/SiteUserRecommendation__c.object-meta.xml
<CustomObject>
    <label>SiteUserRecommendation</label>
    <nameField>
        <label>SiteUserRecommendation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteUserRecommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>