force-app/main/default/objects/SiteUserRecommendation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SiteUserRecommendations</relationshipLabel>
    <relationshipName>SiteUserRecommendations</relationshipName>
    <type>Lookup</type>
</CustomField>