force-app/main/default/objects/SiteUserRecommendation__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>SiteUserRecommendations</relationshipLabel>
    <relationshipName>SiteUserRecommendations</relationshipName>
    <type>Lookup</type>
</CustomField>